refactor: (#39) finish Java collection modernization